fix flex wrap

--- a/service.css
+++ b/service.css
@@ -4,139 +4,123 @@
     box-sizing: border-box;
 }
 
-
-
 body {
-    color: white;
-    font-family: "Poppins";
-    background-color: black;
+
+    display: grid;
+    place-content: center;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    position: relative;
-
-
-
-
-
+    padding: 20px;
+    background-image: linear-gradient(to left bottom, #111111, #0d0d0d, #090909, #050505, #000000);
 }
+
 
 .container {
-
-    display: grid;
-    place-items: center;
-}
-
-
-
-.first-container {
-    display: grid;
-    place-items: center;
-    gap: 20px;
     background-color: #1b1b1ba9;
-    border-radius: 50px;
     padding: 50px;
+    border-radius: 20px;
+    max-width: 100%;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
+    h1{
+        font-family: "Poppins";
+        color: white;
+    }
 
     >div {
-
-        &:nth-child(1) {
-
-            display: flex;
-            flex-wrap: wrap;
-
-        }
-
+     
+        
 
         &:nth-child(2) {
+            gap: 20px;
             display: flex;
             flex-wrap: wrap;
-
-
+            justify-content: center;
+            align-content: center;
+            padding: 5px;
         }
+
+
+        &:nth-child(3) {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-content: center;
+            gap: 20px;
+            padding: 5px;
+        }
+
 
         img {
-            width: 450px;
-            padding: 10px;
-            border-radius: 20px;
-            transition: .2s;
-            box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.1)
-        }
-
-        :hover {
-            transform: scale(1.08);
-        }
-
-    }
-
-}
-
-
-@media(max-width: 767px) {
-
-
-    .first-container {
-
-        >div {
-
-            display: grid;
-            place-items: center;
-            padding: 10px;
+            max-width: 400px;
+            width: 100%;
             gap: 20px;
-            flex-wrap: wrap;
-
-
-            img {
-                width: 250px;
-            }
+            object-fit: cover;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: 0.3s;
         }
-    }
+        :hover{
+            transform: scale(1.05);
+        }
 
+    
+    }
 
 
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (max-width: 767px) {
+
+    .container {
 
 
-    .first-container {
-
-        >div {
-
-            display: grid;
-            place-items: center;
-            grid-template-columns: 1fr 1fr;
-
-
-
-            img {
-                width: 350px;
-            }
+        &:nth-child(2){
+            display: flex;
+           
+         
         }
-    }
 
+        
+        &:nth-child(3){
+            display: flex;
+            flex-wrap: nowrap;
+            
+        }
+
+
+
+
+        img {
+            height: auto;
+            width: 100%;
+            
+        }
+
+    }
 }
 
-@media (min-width: 1025px) and (max-width: 1408px) {
+@media (min-width: 768px){
+    .container {
 
 
-    .first-container {
-
-
-
-
-        >div {
-            display: grid;
-            place-items: center;
-            grid-template-columns: 1fr 1fr;
-
+        .first-container {
+            display: flex;
             img {
-                width: 350px;
+                height: auto;
+                width: 100%;
             }
         }
-    }
 
+        
+        &:nth-child(3){
+            display: flex;
+            flex-wrap: nowrap;
+        }
+    }
 }
 
 
@@ -146,38 +130,4 @@ body {
     height: 100%;
     width: 100%;
     z-index: -100;
-    top: 0;
-}
-
-
-
-@media(min-width: 1409px) and (max-width: 1458px) {
-
-    .first-container {
-
-
-        >div {
-
-            text-align: center;
-            justify-content: center;
-            align-items: center;
-
-
-        }
-
-    }
-
-}
-
-@media(min-width: 1459px) and (max-width: 1912px) {
-
-    .container {
-
-
-        img {
-            max-width: 320px;
-        }
-    }
-
-
 }
